<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/configuration"
    tools:context=".EditarPerfil">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editar_perfil_"
                android:id="@+id/nameText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tName"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/nombre"
                android:textColor="#49698F"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:id="@+id/name"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/arnold_pajuelo"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="0dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tGmail"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/gmail"
                android:textColor="#49698F"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:id="@+id/email"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/arnold_pajuelo_usil_pe"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="0dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tPassword"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/contrase_a"
                android:textColor="#49698F"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:id="@+id/passwordRe"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/contrasena"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="0dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eCelular"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/celular_"
                android:textColor="#49698F"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:id="@+id/tPhone"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/celular"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="0dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tTypeDocument"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/tipo_de_documento"
                android:textColor="#49698F"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:id="@+id/spinner"
                android:background="@drawable/custom_edittext">
            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tNumberDocument"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/numero_de_documento"
                android:textColor="#49698F"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:id="@+id/eNumberDocument"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="0dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/nextButton"
                android:text="@string/guardar_cambios"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius = "20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>