<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/configuration"
    tools:context=".ConfigurationFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuracion"
                android:layout_marginTop="0dp"
                android:id="@+id/configuracion"
                android:textSize="35sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#49698F"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/perfil"
                android:text="@string/editar_perfil"
                android:textSize="23sp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#49698F"
                app:cornerRadius = "15dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/direcciones"
                android:text="@string/editar_direccion"
                android:textSize="23sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#49698F"
                app:cornerRadius = "15dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/pago"
                android:text="@string/metodo_de_pago"
                android:textSize="23sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#49698F"
                app:cornerRadius = "15dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/contrasena"
                android:text="@string/editar_contrase_a"
                android:textSize="23sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#49698F"
                app:cornerRadius = "15dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>

